# PiGenus_Codex

./: .gitignore  BUILD_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  README.md  STATUS.md  pyproject.toml
.github/: pull_request_template.md
deploy/: install-systemd.sh  pigenus-worker.service  pigenus.env.example  pigenus.service
docs/: ADR_TEMPLATE.md  ARCHITECTURE.md  ARCHITECTURE_CONTRACT.md  ARCHITECTURE_CONVERGENCE_REVIEW.md  ARCHITECTURE_FITNESS_REVIEW.md  ARCHITECTURE_HISTORY.md  CANONICAL_ALIGNMENT_PLAN.md  CANONICAL_IMPLEMENTATION_PLAN.md  CELLULAR_INVENTORY_REVIEW.md  CELLULAR_SYSTEMFORM.md  CELL_DNA_CONSOLIDATION_REVIEW.md  CELL_DNA_PROTOCOL.md  CELL_DNA_WORKER_ASSIGNMENT_CREATOR.md  CELL_DNA_WORKER_ASSIGNMENT_RESOURCE_RISK_REFLEX_READINESS_VALIDATOR.md  CELL_DNA_WORKER_ASSIGNMENT_ROOM_CONTEXT_RECHECK_VALIDATOR.md  CELL_DNA_WORKER_ASSIGNMENT_SCHEDULING_ELIGIBILITY_VALIDATOR.md  CELL_DNA_WORKER_ASSIGNMENT_STATUS_TRANSITION_SERVICE.md  CELL_DNA_WORKER_ASSIGNMENT_VALIDATOR.md  CELL_DNA_WORKER_FRESHNESS_POLICY_VALIDATOR.md  CLI_CONVENTIONS.md  CONTEXT_MODEL.md  DATA_ARCHITECTURE.md  DATA_LIFECYCLE.md  DECISIONS.md  DEPLOYMENT.md  DOCUMENTATION_MAINTENANCE.md  EVOLUTION_SANDBOX.md  FULL_CHECK.md  GENUS_ARCHITECTURE_SUMMARY.md  GENUS_CANONICAL_SYSTEMFORM.md  GENUS_METABOLIC_STATE_GRAPH.md  GENUS_PHILOSOPHY.md  GENUS_SYSTEMFORM_v0.1.md  GENUS_VOCABULARY.md  GITHUB_IDEA_HARVEST.md  HUMAN_GOVERNANCE.md  INDEX.md  INTERNAL_COMMUNICATION.md  LIQUID_RUNTIME.md  MIGRATIONS.md  (+25 more)
pigenus/: __init__.py  cli.py  main.py
tests/: conftest.py  test_admin_sessions_memory.py  (+60 more)
(+100 files in other folders)
