[project]
name = "pigenus"
version = "0.4.0.dev0"
description = "Minimal local cognitive core runtime and memory lifecycle for the GENUS system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

[project.scripts]
pigenus-demo = "pigenus.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
